Fixed spacing

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -371,8 +371,8 @@
 
     select#benefit-level {
         display: flex;
-        margin-left: auto;
-        margin-right: auto;
+        /* margin-left: auto;
+        margin-right: auto; */
         margin-bottom: 0;
     }
 
